Add remote library sharing
